--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -1,9 +1,6 @@
 <html>
 
-  <head>
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
+  {% include head.html %}
 
   <body class="HolyGrail">
 
